[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/world/powerups/DoubleLengthEffect.gd" type="Script" id=1]
[ext_resource path="res://source/world/powerups/PaddleWidthTween.gd" type="Script" id=2]
[ext_resource path="res://assets/wav/ReverseLength.wav" type="AudioStream" id=3]

[sub_resource type="AudioStreamRandomPitch" id=1]

audio_stream = ExtResource( 3 )

[node name="DoubleLengthEffect" type="Node2D"]
script = ExtResource( 1 )

[node name="WidthTween" type="Tween" parent="."]
script = ExtResource( 2 )

[node name="ExpireTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ReverseSound" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )

[connection signal="timeout" from="ExpireTimer" to="." method="_expire"]
